--- a/src/main/resources/templates/admin/shared/sidebar.html
+++ b/src/main/resources/templates/admin/shared/sidebar.html
@@ -1,3 +1,4 @@
+<!-- src/main/resources/templates/admin/shared/sidebar.html -->
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -67,7 +68,7 @@
                 <span>Gestión de Autores</span>
             </a>
 
-            <a class="nav-link" th:href="@{/admin/mantenimiento/usuarios}" data-page="usuarios">
+            <a class="nav-link" th:href="@{/admin/usuarios}" data-page="usuarios">
                 <i class="bi bi-people"></i>
                 <span>Gestión de Usuarios</span>
             </a>
