feat: Update pagination parameters for libros-pedidos and autores-pedidos pages

--- a/bin/src/main/resources/templates/admin/shared/sidebar.html
+++ b/bin/src/main/resources/templates/admin/shared/sidebar.html
@@ -38,12 +38,12 @@
                 <span>Libros en Alquiler</span>
             </a>
             
-            <a class="nav-link" th:href="@{/admin/libros-pedidos}" data-page="libros-pedidos">
+            <a class="nav-link" th:href="@{/admin/libros-pedidos?size=10}" data-page="libros-pedidos">
                 <i class="bi bi-graph-up-arrow"></i>
                 <span>Libros Más Pedidos</span>
             </a>
             
-            <a class="nav-link" th:href="@{/admin/autores-pedidos}" data-page="autores-pedidos">
+            <a class="nav-link" th:href="@{/admin/autores-pedidos?top=10}" data-page="autores-pedidos">
                 <i class="bi bi-people-fill"></i>
                 <span>Autores Más Pedidos</span>
             </a>
